addign paralel